--- a/app/src/main/res/layout/activity_spending_chart.xml
+++ b/app/src/main/res/layout/activity_spending_chart.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/spending_limit_reach_cb_text"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.236"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/warn_spending_limit_cb_text"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.195"
                 app:layout_constraintStart_toStartOf="parent"
@@ -145,6 +147,7 @@
                 android:text="@string/set_spending_limit_textview"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/totalSpendingAmtTextview" />
@@ -153,18 +156,30 @@
                 android:id="@+id/setSpendingLimitAmtText"
                 android:layout_width="360dp"
                 android:layout_height="48dp"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:inputType="numberDecimal"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 android:text="@string/set_spending_limit_text"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/setSpendingLimitTextview" />
+                app:layout_constraintTop_toBottomOf="@+id/totalSpendingAmtTextview" />
 
-
+            <Button
+                android:id="@+id/spendingChartRefreshButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="@string/refresh_button_text"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/totalSpendingAmtTextview"
+                app:layout_constraintVertical_bias="0.466" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -174,7 +189,8 @@
     <FrameLayout
         android:id="@+id/spending_chart_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/spendingLimitTitle"
