--- a/app/src/main/res/layout/fragment_seller_registration.xml
+++ b/app/src/main/res/layout/fragment_seller_registration.xml
@@ -42,7 +42,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/seller_password_retype_input"
+                app:layout_constraintTop_toBottomOf="@+id/card_no_input"
                 app:layout_constraintWidth_percent="0.5" />
 
             <EditText
@@ -151,6 +151,52 @@
                 android:text="@string/retype_password"
                 app:layout_constraintBottom_toTopOf="@+id/seller_password_retype_input"
                 app:layout_constraintStart_toStartOf="@+id/seller_password_retype_input" />
+
+            <Spinner
+                android:id="@+id/bank_name_input"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/seller_password_retype_input"
+                app:layout_constraintWidth_percent="0.5" />
+
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/bank_name"
+                app:layout_constraintBottom_toTopOf="@+id/bank_name_input"
+                app:layout_constraintStart_toStartOf="@+id/bank_name_input" />
+
+            <EditText
+                android:id="@+id/card_no_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:hint="@string/card_no"
+                android:inputType="number"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bank_name_input" />
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/card_no"
+                app:layout_constraintBottom_toTopOf="@+id/card_no_input"
+                app:layout_constraintStart_toStartOf="@+id/card_no_input" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
